backend/k8s/auth-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  namespace: game-backend
  labels:
    app: auth-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: auth-server
        image: rg.nl-ams.scw.cloud/parhsk/auth-server:latest
        imagePullPolicy: Always
        ports:
          - name: api
            containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 256Mi
