backend/k8s/auth-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: game-backend
  labels:
    app: auth-server
spec:
  selector:
    label: auth-server
  ports:
    - name: api
      port: 3000
      targetPort: api
      protocol: TCP
