backend/k8s/auth-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-server
  namespace: game-backend
  labels:
    app: auth-server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: game.kontoulis.me
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-server
                port:
                  name: api
  tls:
    - hosts:
        - game.kontoulis.me
      secretName: game-acme-tls
